--- a/projects/icc-demo/src/app/app.component.html
+++ b/projects/icc-demo/src/app/app.component.html
@@ -1,5 +1,5 @@
 <icc-layout layout="viewport">
-  <icc-layout-header>
+  <icc-layout-header [title]="title">
     <button icc-button [routerLink]="['dashboard']">Dashboard</button>
     <button icc-button [routerLink]="['grid']">Grid</button>
     <button icc-button [routerLink]="['tree']">Tree</button>
