--- a/projects/icc-demo/src/app/app.component.scss
+++ b/projects/icc-demo/src/app/app.component.scss
@@ -3,7 +3,12 @@
 
   icc-select-field {
     width: 150px;
+
+    ::ng-deep .icc-form-field-container {
+      background-color: unset;
+    }
   }
+
   .theme {
     input {
       width: 250px;
