--- a/projects/icc/layout/src/layout-header.component.html
+++ b/projects/icc/layout/src/layout-header.component.html
@@ -1,10 +1,9 @@
 <div *ngIf="title !== undefined" class="icc-layout-header-title">{{ title | translate }}</div>
 
-<ng-content></ng-content>
-
 <ng-container *ngFor="let button of buttons">
   <button icc-button *ngIf="!button.hidden" [disabled]="button.disabled" (click)="buttonClick(button)">
     <icc-icon *ngIf="button.icon" [icon]="button.icon"></icc-icon>
-    {{ button.title | translate }}
+    {{ getTitle(button) | translate }}
   </button>
 </ng-container>
+<ng-content></ng-content>
