--- a/projects/icc/form/src/components/form-view.component.html
+++ b/projects/icc/form/src/components/form-view.component.html
@@ -8,7 +8,7 @@
   <ng-container *ngFor="let button of formConfig.buttons">
     <button icc-button *ngIf="!buttonHidden(button)" [disabled]="buttonDisabled(button)" (click)="buttonClick(button)">
       <icc-icon *ngIf="button.icon" [icon]="button.icon"></icc-icon>
-      {{ button.title | translate }}
+      {{ getButtonTitle(button) | translate }}
     </button>
   </ng-container>
 </icc-layout-header>
