--- a/projects/icc/layout/src/layout-header.component.scss
+++ b/projects/icc/layout/src/layout-header.component.scss
@@ -4,4 +4,14 @@
   justify-content: center;
   align-items: center;
   padding: 0 5px;
+
+  ::ng-deep {
+    icc-layout-header-end {
+      display: flex;
+      z-index: 2;
+      justify-content: center;
+      align-items: center;
+      flex-flow: row wrap;
+    }
+  }
 }
