--- a/projects/icc/dashboard/src/dashboard.component.scss
+++ b/projects/icc/dashboard/src/dashboard.component.scss
@@ -2,7 +2,7 @@
   display: flex;
   width: 100%;
   height: 100%;
-  padding: 0 5px;
+  padding-left: 2px;
 
   icc-layout {
     display: block;
@@ -11,7 +11,6 @@
   .icc-tile-list {
     display: grid;
     position: absolute;
-    //padding: 10px;
   }
 
   .icc-tile-item {
