--- a/projects/icc/menu/src/popover-menu.component.html
+++ b/projects/icc/menu/src/popover-menu.component.html
@@ -1,4 +1,4 @@
-<div [iccPopover]="menu" [iccPopoverTrigger]="menuTrigger">
+<div [iccPopover]="menu" [iccPopoverTrigger]="menuTrigger" [iccPopoverPosition]="position">
   <span *ngIf="menuItem.title">{{ menuItem.title }}</span>
   <i *ngIf="menuItem.icon" [class]="menuItem.icon" style="color: green"></i>
 </div>
