--- a/projects/icc/accordion/src/accordion.component.html
+++ b/projects/icc/accordion/src/accordion.component.html
@@ -5,8 +5,8 @@
       [title]="getTitle(item)"
       (click)="toggle(item, !!item.expanded)"
     >
-      <i *ngIf="item.expanded" class="fa-solid fa-chevron-up"></i>
-      <i *ngIf="!item.expanded" class="fa-solid fa-chevron-down"></i>
+      <icc-icon *ngIf="item.expanded" config="chevron-up"></icc-icon>
+      <icc-icon *ngIf="!item.expanded" config="chevron-down"></icc-icon>
     </icc-layout-header>
 
     <icc-layout-horizontal *ngIf="item?.expanded && item.items">
