--- a/projects/icc/menu/src/components/menu-item/menu-item.component.scss
+++ b/projects/icc/menu/src/components/menu-item/menu-item.component.scss
@@ -5,8 +5,16 @@
   align-items: center;
 
   .icc-menu-item {
-    padding: 0px 10px;
+    display: flex;
     width: 100%;
+    flex-direction: row;
+    justify-content: flex-end;
+    align-items: center;
+    padding: 0 5px;
+
+    .icc-menu-title {
+      margin-right: auto;
+    }
 
     &:hover {
       cursor: pointer;
