popover menu position

--- a/projects/icc/menu/src/menus.component.html
+++ b/projects/icc/menu/src/menus.component.html
@@ -4,7 +4,7 @@
   <span
     *ngIf="hasChildItem(item) && level === 0"
     [iccPopover]="menu"
-    [iccPopoverTrigger]="popoverTrigger"
+    [iccPopoverTrigger]="menuTrigger"
     [popoverLevel]="level + 1"
     [iccPopoverPosition]="bottom"
   >
