--- a/projects/icc/grid/src/components/grid-header/grid-column-menu/grid-column-menu.component.html
+++ b/projects/icc/grid/src/components/grid-header/grid-column-menu/grid-column-menu.component.html
@@ -3,7 +3,7 @@
     [items]="menuItems"
     [level]="level + 1"
     (iccMenuItemChange)="onMenuItemChange($event)"
-    (iccMenuItemClick)="onMenuItemChange($event)"
+    (iccMenuItemClick)="onMenuItemClick($event)"
   >
   </icc-menus>
 </ng-container>
