--- a/projects/icc/menu/src/components/menu-item/menu-item.component.scss
+++ b/projects/icc/menu/src/components/menu-item/menu-item.component.scss
@@ -49,6 +49,19 @@
     width: 100%;
     border: none;
   }
+
+  ::ng-deep .icc-form-field-infix {
+    flex: unset !important;
+  }
+
+  ::ng-deep .icc-form-field-container {
+    height: 25px;
+    border-bottom: 0px;
+  }
+
+  ::ng-deep .icc-form-field {
+    padding: 0px !important;
+  }
 }
 
 :-webkit-any-link {
