menu form field

--- a/projects/icc/grid/src/components/grid-header/grid-column-menu/grid-column-menu.component.html
+++ b/projects/icc/grid/src/components/grid-header/grid-column-menu/grid-column-menu.component.html
@@ -2,6 +2,7 @@
   <icc-menus
     [items]="menuItems"
     [level]="level + 1"
+    [values]="values"
     (iccMenuItemChange)="onMenuItemChange($event)"
     (iccMenuItemClick)="onMenuItemClick($event)"
   >
