--- a/projects/icc/menu/src/components/menu-item/menu-item.component.html
+++ b/projects/icc/menu/src/components/menu-item/menu-item.component.html
@@ -19,6 +19,10 @@
 </icc-checkbox-field>
 
 <!--
+
+<icc-checkbox-field *ngIf="fieldConfig.fieldType === 'checkbox'" [fieldConfig]="fieldConfig" [form]="form">
+</icc-checkbox-field>
+
 [showFieldFieldIndicator]=
 <icc-checkbox
   *ngIf="menuItem.checkbox"
