--- a/projects/icc/checkbox/src/checkbox.component.html
+++ b/projects/icc/checkbox/src/checkbox.component.html
@@ -7,6 +7,7 @@
     [disabled]="disabled"
     [indeterminate]="indeterminate"
     (change)="updateValueAndIndeterminate($event)"
+    (click)="$event.stopPropagation()"
   />
   <span class="icc-checkbox-container">
     <icc-icon *ngIf="indeterminate" icon="minus"></icc-icon>
@@ -16,5 +17,3 @@
     <ng-content></ng-content>
   </span>
 </label>
-<!--
-    (click)="$event.stopPropagation()" -->
