--- a/projects/icc/menu/src/components/menu-item/menu-item.component.scss
+++ b/projects/icc/menu/src/components/menu-item/menu-item.component.scss
@@ -62,6 +62,10 @@
   ::ng-deep .icc-form-field {
     padding: 0px !important;
   }
+
+  ::ng-deep .icc-form-field-suffix {
+    width: 100%;
+  }
 }
 
 :-webkit-any-link {
