menu form field

--- a/projects/icc/menu/src/components/menu-item/menu-item.component.html
+++ b/projects/icc/menu/src/components/menu-item/menu-item.component.html
@@ -19,7 +19,7 @@
 </icc-checkbox-field>
 
 <!--
-
+  [disabled]="!!menuItem.disabled"
 [showFieldFieldIndicator]=
 <icc-checkbox
   *ngIf="menuItem.checkbox"
