menu form field

--- a/projects/icc/menu/src/menus.component.scss
+++ b/projects/icc/menu/src/menus.component.scss
@@ -3,7 +3,7 @@
   flex-direction: column;
   width: 100%;
   min-width: 120px;
-  max-width: 200px;
+  //max-width: 200px;
 }
 
 .icc-menus-sub-level {
