--- a/projects/icc/menu/src/components/menu-item/menu-item.component.html
+++ b/projects/icc/menu/src/components/menu-item/menu-item.component.html
@@ -15,6 +15,7 @@
   [form]="form"
   [fieldConfig]="fieldConfig"
   [showFieldFieldIndicator]="false"
+  [disabled]="disabledMenu"
 >
 </icc-checkbox-field>
 
