--- a/projects/icc/menu/src/components/menu-item/menu-item.component.html
+++ b/projects/icc/menu/src/components/menu-item/menu-item.component.html
@@ -15,11 +15,11 @@
   [form]="form"
   [fieldConfig]="fieldConfig"
   [showFieldFieldIndicator]="false"
-  [disabled]="disabledMenu"
 >
 </icc-checkbox-field>
 
-<!--
+<!-- 
+  [value]="checked"
   [disabled]="!!menuItem.disabled"
 [showFieldFieldIndicator]=
 <icc-checkbox
