--- a/projects/icc/menu/src/menus.component.html
+++ b/projects/icc/menu/src/menus.component.html
@@ -2,7 +2,7 @@
   <ng-container *ngFor="let item of items">
     <icc-menu-item
       *ngIf="isLeafMenu(item)"
-      [disabledMenu]="getDisabled(item)"
+      [disabled]="getDisabled(item)"
       [form]="form"
       [menuItem]="item"
       (iccMenuItemClick)="menuItemClick($event)"
@@ -23,7 +23,7 @@
 
     <icc-menu-item
       *ngIf="hasChildItem(item) && level > 0"
-      [disabledMenu]="getDisabled(item)"
+      [disabled]="getDisabled(item)"
       [form]="form"
       [menuItem]="item"
       [iccPopover]="menu"
@@ -41,6 +41,7 @@
         class="icc-menus-sub-level"
         [items]="item.children!"
         [values]="values"
+        [disabled]="disabled"
         [level]="level + 1"
         [clickToClose]="clickToClose"
         (iccMenuItemClick)="menuItemClick($event)"
