--- a/projects/icc/fields/src/checkbox-field/checkbox-field.component.html
+++ b/projects/icc/fields/src/checkbox-field/checkbox-field.component.html
@@ -4,7 +4,7 @@
     [iccLabelWidth]="fieldConfig.labelWidth"
     [iccFieldWidth]="fieldConfig.fieldWidth"
     [iccFormFieldControl]="field"
-    [showFieldFieldIndicator]="showFieldFieldIndicator"
+    [showFieldEditIndicator]="showFieldEditIndicator"
   >
     <icc-label *ngIf="fieldConfig.fieldLabel !== undefined && fieldConfig.labelBeforeCheckbox">
       {{ fieldConfig.fieldLabel | translate }}
