--- a/projects/icc/grid/src/components/column-filter/text/text-filter.component.html
+++ b/projects/icc/grid/src/components/column-filter/text/text-filter.component.html
@@ -1,1 +1,7 @@
-<icc-text-field [fieldConfig]="fieldConfig" [value]="value" (valueChange)="onValueChange($event)"> </icc-text-field>
+<icc-text-field
+  [fieldConfig]="fieldConfig"
+  [value]="value"
+  [showFieldEditIndicator]="false"
+  (valueChange)="onValueChange($event)"
+>
+</icc-text-field>
