--- a/projects/icc/menu/src/components/menu-item/menu-item.component.html
+++ b/projects/icc/menu/src/components/menu-item/menu-item.component.html
@@ -14,7 +14,7 @@
   *ngIf="menuItem.checkbox"
   [form]="form"
   [fieldConfig]="fieldConfig"
-  [showFieldFieldIndicator]="false"
+  [showFieldEditIndicator]="false"
 >
 </icc-checkbox-field>
 
