--- a/projects/icc/grid/src/components/column-filter/select/select-filter.component.html
+++ b/projects/icc/grid/src/components/column-filter/select/select-filter.component.html
@@ -2,6 +2,7 @@
   *ngIf="fieldConfig"
   [fieldConfig]="fieldConfig"
   [value]="value"
+  [showFieldEditIndicator]="false"
   (selectionChange)="onSelectionChange($event)"
 >
 </icc-select-field>
