replace portal with overlay-cpontainer

--- a/projects/icc/dashboard/src/dashboard.component.html
+++ b/projects/icc/dashboard/src/dashboard.component.html
@@ -30,7 +30,7 @@
           [cdkDragDisabled]="isDragDisabled(tile)"
           [cdkDragData]="i"
         >
-          <icc-overlay-container [content]="tile.content!" [context]="tile.context!"></icc-overlay-container>
+          <icc-portal-container [content]="tile.content!" [context]="tile.context!"></icc-portal-container>
         </div>
       </cdk-drop-list>
       <div
